unpackaged/main/default/objects/Case/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the person who is assigned to your ticket to complete</inlineHelpText>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>