unpackaged/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>When is this item needed in the production instance of Salesforce? Please pick reasonable timeframes. Urgent items should be surfaced in #salesops slack channel</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>