unpackaged/main/default/objects/Case/fields/Estimated_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Story_Points__c</fullName>
    <inlineHelpText>This is the estimated length of time this story will take to complete.</inlineHelpText>
    <label>Estimated Story Points</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>