unpackaged/main/default/objects/Case/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Dashboard / Reporting Request</fullName>
            </value>
            <value>
                <fullName>Opportunity Management</fullName>
            </value>
            <value>
                <fullName>Permission Issue</fullName>
            </value>
            <value>
                <fullName>Quote Management</fullName>
            </value>
            <value>
                <fullName>Tooling Improvement</fullName>
            </value>
            <value>
                <fullName>Tooling Issue / Request</fullName>
            </value>
            <value>
                <fullName>Deal Desk Request</fullName>
                <isActive>false</isActive>
                <label>Deal Desk Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>