unpackaged/main/default/objects/Case/recordTypes/Sales_Operations.recordType-meta.xml
<RecordType>
    <fullName>Sales_Operations</fullName>
    <active>true</active>
    <businessProcess>Sales Operations</businessProcess>
    <description>Sales Operations record type for cases</description>
    <label>Sales Operations</label>
</RecordType>