unpackaged/main/default/objects/Case/listViews/Closed_Current_Sprint_Cases.listView-meta.xml
<ListView>
    <fullName>Closed_Current_Sprint_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Assignee__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>New,In Progress,Follow-Up,On Hold</value>
    </filters>
    <label>Closed Current Sprint Cases</label>
</ListView>