unpackaged/main/default/objects/Case/listViews/Current_Sprint_Cases.listView-meta.xml
<ListView>
    <fullName>Current_Sprint_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Assignee__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Backlog,To Do,In Progress,Follow-Up,Blocked,In Review</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Sales_Operations</value>
    </filters>
    <label>Current Sprint Cases</label>
</ListView>